src/test/ui/error-codes/E0267.stderr
error[E0267]: `break` inside of a closure
  --> $DIR/E0267.rs:12:18
   |
LL |     let w = || { break; }; //~ ERROR E0267
   |                  ^^^^^ cannot break inside of a closure

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0267"
