src/test/ui/error-codes/E0267.rs
fn main() {
    let w = || { break; }; //~ ERROR E0267
}
